unleash the beast

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <main>
-  <button (click)="surpriseNow()">{{surprise ? "Reset" : "Surprise me!"}}</button>
+  <button (click)="surpriseNow()">{{surprise ? "Reset" : "Unleash the beast!"}}</button>
   <div *ngIf="surprise">
     <app-frame></app-frame>
   </div>
